--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
@@ -3,12 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="@drawable/white_texture"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingStart="20dp"
+    android:paddingEnd="20dp"
     tools:context=".QuickCalcActivity">
 
+    <!-- First Row: 7, 8, 9, + -->
+
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/calcDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CALC"
@@ -16,206 +21,175 @@
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.817"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias=".342" />
-
-    <Button
-        android:id="@+id/button13"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="0"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.854" />
-
-    <Button
-        android:id="@+id/button16"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="="
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.854" />
-
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="1"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <Button
-        android:id="@+id/button10"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="2"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.358"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <Button
-        android:id="@+id/button11"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="3"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <Button
-        android:id="@+id/button12"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:backgroundTint="@color/primaryTextColor"
-        android:text="x"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.631" />
-
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="4"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.388" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="5"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.358"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.388" />
+        app:layout_constraintVertical_bias="0.263" />
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:backgroundTint="@color/primaryTextColor"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="7"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.098"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.156" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="8"
-        android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.358"
+        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.156" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:backgroundTint="@color/primaryTextColor"
-        android:text="9"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.156" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="+"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.156" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="6"
-        android:textSize="30sp"
-        android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.388" />
+        app:layout_constraintEnd_toStartOf="@+id/button8"
+        app:layout_constraintHorizontal_chainStyle="spread" />
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="65dp"
-        android:layout_height="71dp"
-        android:text="-"
-        android:backgroundTint="@color/primaryTextColor"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="8"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.878"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintStart_toEndOf="@+id/button7"
+        app:layout_constraintEnd_toStartOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="9"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintStart_toEndOf="@+id/button8"
+        app:layout_constraintEnd_toStartOf="@+id/buttonPlus" />
+
+    <Button
+        android:id="@+id/buttonPlus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="+"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintStart_toEndOf="@+id/button9"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Second Row: 4, 5, 6, - -->
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="4"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button7"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.388" />
+        app:layout_constraintEnd_toStartOf="@+id/button5"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="5"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button8"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintEnd_toStartOf="@+id/button6" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="6"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button9"
+        app:layout_constraintStart_toEndOf="@+id/button5"
+        app:layout_constraintEnd_toStartOf="@+id/buttonMinus" />
+
+    <Button
+        android:id="@+id/buttonMinus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="-"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
+        app:layout_constraintStart_toEndOf="@+id/button6"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+
+    <!-- Third Row: 1, 2, 3, x -->
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="1"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="2"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button5"
+        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintEnd_toStartOf="@+id/button3" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="3"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintEnd_toStartOf="@+id/buttonBack" />
+
+    <Button
+        android:id="@+id/buttonBack"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="x"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
+        app:layout_constraintStart_toEndOf="@+id/button3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <!-- Fourth Row: 0, = -->
+    <Button
+        android:id="@+id/button0"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/button1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
+
+    <Button
+        android:id="@+id/buttonEqual"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="="
+        android:textSize="30sp"
+        android:backgroundTint="@color/primaryTextColor"
+        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
+        app:layout_constraintStart_toEndOf="@+id/button0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_chainStyle="spread"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
