--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
@@ -10,13 +10,13 @@
     android:paddingEnd="20dp"
     tools:context=".QuickCalcActivity">
 
-    <!-- First Row: 7, 8, 9, + -->
 
     <TextView
         android:id="@+id/calcDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CALC"
+        android:textAlignment="textEnd"
         android:textColor="@color/primaryTextColor"
         android:textSize="60sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -26,6 +26,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.263" />
 
+
+    <!-- First Row: 7, 8, 9, + -->
     <Button
         android:id="@+id/button7"
         android:layout_width="0dp"
@@ -36,7 +38,8 @@
         app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button8"
-        app:layout_constraintHorizontal_chainStyle="spread" />
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="spread"/>
 
     <Button
         android:id="@+id/button8"
@@ -177,7 +180,8 @@
         app:layout_constraintTop_toBottomOf="@+id/button1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintHorizontal_chainStyle="spread"/>
+        app:layout_constraintHorizontal_chainStyle="spread"
+        app:layout_constraintVertical_chainStyle="spread"/>
 
     <Button
         android:id="@+id/buttonEqual"
