--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
@@ -11,23 +11,43 @@
     tools:context=".QuickCalcActivity">
 
 
+    <!-- TV to display buttons pressed before hitting Equals -->
+
     <TextView
         android:id="@+id/calcDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CALC"
+        android:text="8989"
         android:textAlignment="textEnd"
         android:textColor="@color/primaryTextColor"
-        android:textSize="60sp"
+        android:textSize="68sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.263" />
+        app:layout_constraintVertical_bias="0.172" />
 
 
-    <!-- First Row: 7, 8, 9, + -->
+    <!-- TV to display result after hitting Equals -->
+
+
+    <!-- First row: 7, 8, 9, + -->
+    <TextView
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CALC"
+        android:textAlignment="textEnd"
+        android:textColor="@color/primaryTextColor"
+        android:textSize="48sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/calcDisplay"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.311" />
+
     <Button
         android:id="@+id/button7"
         android:layout_width="0dp"
@@ -35,7 +55,7 @@
         android:text="7"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/result"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -48,7 +68,7 @@
         android:text="8"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/result"
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintEnd_toStartOf="@+id/button9" />
 
@@ -59,7 +79,7 @@
         android:text="9"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/result"
         app:layout_constraintStart_toEndOf="@+id/button8"
         app:layout_constraintEnd_toStartOf="@+id/buttonPlus" />
 
@@ -70,7 +90,7 @@
         android:text="+"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/calcDisplay"
+        app:layout_constraintTop_toBottomOf="@+id/result"
         app:layout_constraintStart_toEndOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -184,7 +204,7 @@
         app:layout_constraintVertical_chainStyle="spread"/>
 
     <Button
-        android:id="@+id/buttonEqual"
+        android:id="@+id/buttonEquals"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="="
