--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_quick_calc.xml
@@ -34,7 +34,7 @@
 
     <!-- First row: 7, 8, 9, + -->
     <TextView
-        android:id="@+id/result"
+        android:id="@+id/resultDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="CALC"
@@ -55,7 +55,7 @@
         android:text="7"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintTop_toBottomOf="@+id/resultDisplay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button8"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -68,7 +68,7 @@
         android:text="8"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintTop_toBottomOf="@+id/resultDisplay"
         app:layout_constraintStart_toEndOf="@+id/button7"
         app:layout_constraintEnd_toStartOf="@+id/button9" />
 
@@ -79,7 +79,7 @@
         android:text="9"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintTop_toBottomOf="@+id/resultDisplay"
         app:layout_constraintStart_toEndOf="@+id/button8"
         app:layout_constraintEnd_toStartOf="@+id/buttonPlus" />
 
@@ -90,7 +90,7 @@
         android:text="+"
         android:textSize="30sp"
         android:backgroundTint="@color/primaryTextColor"
-        app:layout_constraintTop_toBottomOf="@+id/result"
+        app:layout_constraintTop_toBottomOf="@+id/resultDisplay"
         app:layout_constraintStart_toEndOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent" />
 
