--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_main.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,18 @@
         app:layout_constraintTop_toBottomOf="@+id/button_aboutMe"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/button_contacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:backgroundTint="#4A596D"
+        android:text="Contacts"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_quickCalc"
+        app:layout_constraintVertical_bias="0.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
