--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
@@ -17,14 +18,19 @@
             android:id="@+id/textViewName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/primaryTextColor"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewPhone"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp" />
+            android:textColor="@color/primaryTextColor"
+            android:layout_marginTop="4dp"
+            android:layout_weight="1"
+            android:textAlignment="textEnd"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
