--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_contacts.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_contacts.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
+    <!-- RecyclerView for displaying contacts -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvContacts"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
-        app:layout_constraintBaseline_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonBackToMain" />
 
+    <!-- Floating Action Button to add new contacts -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddContact"
         android:layout_width="wrap_content"
@@ -23,13 +25,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Back Button to navigate back to main activity -->
     <Button
         android:id="@+id/buttonBackToMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4A596D"
         android:text="Back"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="#4A596D"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
