--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
@@ -15,7 +15,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/textViewName"
+            android:id="@+id/contactsName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -24,7 +24,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textViewPhone"
+            android:id="@+id/contactsPhone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/primaryTextColor"
