--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/single_contact.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="16dp">
 
         <TextView
@@ -20,8 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/primaryTextColor"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/contactsPhone"
@@ -30,7 +29,9 @@
             android:textColor="@color/primaryTextColor"
             android:layout_marginTop="4dp"
             android:layout_weight="1"
-            android:textAlignment="textEnd"/>
+            android:textSize="16sp"
+            android:textAlignment="textEnd"
+            />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
