--- a/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_contacts.xml
+++ b/NUMAD24FA_XiaolinLiu/app/src/main/res/layout/activity_contacts.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_margin="8dp"
+        android:scrollbars="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/buttonBackToMain" />
 
